# wasm-plugin-test

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
backend/: Cargo.toml  Dockerfile  db.sqlite
backend/plugins/: avg.wasm  clip.wasm
backend/src/: main.rs  metrics.rs  migration.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  Chart.tsx
plugins/avg/: Cargo.toml
plugins/avg/src/: lib.rs
plugins/clip/: Cargo.toml
plugins/clip/src/: lib.rs
plugins/host-fn/: Cargo.toml
plugins/host-fn/src/: lib.rs
src/: main.rs  metrics.rs  migration.rs  push.rs
