[package]
name = "metis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
axum = { version = "0.6" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json", "functions", "limits", "chrono", "uuid", "extra_check"] }
rusqlite_migration = "1.0.2"